add user Controller and update swagger
